Fixed sidebar bug, when the list overflowed

--- a/client/src/components/app/App.css
+++ b/client/src/components/app/App.css
@@ -110,6 +110,7 @@
 
 .side-bar {
   top: 60px !important;
+  bottom: 0px !important;
   padding-top: 20px;
   z-index: 1000 !important;
   width: 250px;
